# musicbot

./: README.md  manage.py  pyproject.toml  test.py
musicbot/: asgi.py  settings.py  test.py  urls.py  wsgi.py
youscrape/: apps.py  models.py  views.py
youscrape/discord/: music_bot.py
youscrape/migrations/: 0001_initial.py
